--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>김혜수는 바보다<p>
-    이런 것도 못한다.
-</p>
-
-</h1>
+<h1>김혜수는 바보다. 이런 것도 못한다.</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
