--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
            <header>
                <div class="row">
                    <ul class="main-nav">
-                       <li><a href=""> HOME</a></li>
+                       <li class="active"><a href=""> HOME</a></li>
                        <li><a href=""> CITY</a></li>
                        <li><a href=""> ABOUT</a></li>
                        <li><a href=""> NEWS</a></li>
