--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
        </head>
        <body>
            <header>
-               <div class="row">
+                <div class="logo">
+                        <img src="image/181713.png"></div>
+            <div class="row">
+
                    <ul class="main-nav">
-                       <li class="active"><a href=""> HOME</a></li>
-                       <li><a href=""> CITY</a></li>
-                       <li><a href=""> ABOUT</a></li>
+                       <li class="active"><a href="index2.html"> ABOUT</a></li>
                        <li><a href=""> NEWS</a></li>
                        <li><a href=""> FAQ</a></li>
                    </ul>
-               </div>
+                   </div>
+
+                   <div class="hero">
+                       <h1> Traveler's Cabin</h1>
+                       <div class="button">
+                           <a href="" class="btn btn-one"> watch video></a>
+                           <a href="" class="btn btn-two"> do what you want></a>
+                       </div>
+                   </div>
            </header>
        </body>
 </html>
