--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
        </head>
        <body>
            <header>
-                <div class="logo">
-                        <img src="image/181713.png"></div>
+                <!-- <div class="logo">
+                        <img src="image/181713.png"></div> -->
             <div class="row">
 
                    <ul class="main-nav">
@@ -19,8 +19,8 @@
                    <div class="hero">
                        <h1> Traveler's Cabin</h1>
                        <div class="button">
-                           <a href="" class="btn btn-one"> watch video></a>
-                           <a href="" class="btn btn-two"> do what you want></a>
+                           <a href="" class="btn btn-one"> watch video</a>
+                           <a href="" class="btn btn-two"> do what you want</a>
                        </div>
                    </div>
            </header>
