--- a/index.html
+++ b/index.html
@@ -5,24 +5,22 @@
        </head>
        <body>
            <header>
-                <!-- <div class="logo">
-                        <img src="image/181713.png"></div> -->
             <div class="row">
-
-                   <ul class="main-nav">
+                    <ul class="main-nav">
                        <li class="active"><a href="index2.html"> ABOUT</a></li>
                        <li><a href=""> NEWS</a></li>
                        <li><a href=""> FAQ</a></li>
                    </ul>
                    </div>
 
-                   <div class="hero">
-                       <h1> Traveler's Cabin</h1>
-                       <div class="button">
-                           <a href="" class="btn btn-one"> watch video</a>
-                           <a href="" class="btn btn-two"> do what you want</a>
+                   <div class="intro">
+                       <h1> Traveler's Cabin!</h1>
+                       <div class="box">
+                           <a href="" class="bx bx1"> watch video</a>
+                           <a href="" class="bx bx2"> do what you want</a>
                        </div>
-                   </div>
+                   </div>                  
            </header>
-       </body>
+        </div>
+    </body>
 </html>
