--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Travel</title>
-        <link href="style.css" rel="stylesheet" type = "text/css">
+        <link href="index.css" rel="stylesheet" type = "text/css">
        </head>
        <body>
            <header>
             <div class="row">
                     <ul class="main-nav">
-                       <li class="active"><a href="index2.html"> ABOUT</a></li>
-                       <li><a href=""> NEWS</a></li>
-                       <li><a href=""> FAQ</a></li>
+                       <li class="active"><a href="index.html"> HOME</a></li>
+                       <li><a href="city.html"> CITY</a></li>
+                       <li><a href="faq.html"> FAQ</a></li>
                    </ul>
                    </div>
 
                    <div class="intro">
-                       <h1> Traveler's Cabin!</h1>
+                       <h1> Traveler's Cabin</h1>
                        <div class="box">
-                           <a href="" class="bx bx1"> watch video</a>
-                           <a href="" class="bx bx2"> do what you want</a>
+                           <a href="whoami.html" class="bx bx1"> Who am I?</a>
+                           <a href="gallery.html" class="bx bx2"> Gallery</a>
                        </div>
                    </div>                  
            </header>
