--- a/whoami.html
+++ b/whoami.html
@@ -9,13 +9,12 @@
             <div class="row">
                     <ul class="main-nav">
                        <li class="active"><a href="index.html"> HOME</a></li>
-                       <li><a href="city.html"> CITY</a></li>
                        <li><a href="faq.html"> FAQ</a></li>
                     </ul>
                    </div>
                 </header>
                    <div class="profile">
-                        <img src="image/KakaoTalk_20180508_195412651.jpg" alt="" class ="profile-img" align= "center" >
+                        <img src="image/KakaoTalk_20180508_195412651.jpg" alt="" class ="profile-img">
                         <h1>KANG SEUNGYEON</h1>
                         <br><h5>IT Student - Traveler</h5>
                         <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
