--- a/whoami.html
+++ b/whoami.html
@@ -3,6 +3,8 @@
         <meta charset="utf-8">
         <title>Travel</title>
         <link href="whoami.css" rel="stylesheet" type = "text/css">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        
        </head>
        <body>
            <header>
@@ -17,7 +19,11 @@
                         <img src="image/KakaoTalk_20180508_195412651.jpg" alt="" class ="profile-img">
                         <h1>KANG SEUNGYEON</h1>
                         <br><h5>IT Student - Traveler</h5>
-                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
-                        </div>
+                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>   
+                        <br><ul>
+                                <li><a href="https://www.instagram.com/tldtld2222/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                 
     </body>
 </html>
