--- a/gallery.html
+++ b/gallery.html
@@ -14,10 +14,31 @@
                    </div>
                 </header>
                    <div class="profile">
-                        <img src="image/KakaoTalk_20180508_195412651.jpg" alt="" class ="profile-img" align= "center" >
+                        <img src="image/ok.jpg" alt="" class ="profile-img" align= "center" >
                         <h1>KANG SEUNGYEON</h1>
                         <br><h5>IT Student - Traveler</h5>
                         <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
-                        </div>
+                    <br><br><br>
+                    <img src="image/red.jpg" alt="" class ="profile-img" align= "center" >    
+                    <h1>KANG SEUNGYEON</h1>
+                        <br><h5>IT Student - Traveler</h5>
+                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
+                    <br><br><br>
+                    <img src="image/red.jpg" alt="" class ="profile-img" align= "center" >    
+                    <h1>KANG SEUNGYEON</h1>
+                        <br><h5>IT Student - Traveler</h5>
+                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
+                    <br><br><br>
+                    <img src="image/red.jpg" alt="" class ="profile-img" align= "center" >    
+                    <h1>KANG SEUNGYEON</h1>
+                        <br><h5>IT Student - Traveler</h5>
+                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
+                    <br><br><br>
+                    <img src="image/red.jpg" alt="" class ="profile-img" align= "center" >    
+                    <h1>KANG SEUNGYEON</h1>
+                        <br><h5>IT Student - Traveler</h5>
+                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
+                    <br><br><br>
+                    </div>
     </body>
 </html>
