--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
                     </ul>
                    </div>
                 </header>
-                   <div class="profile">
+                   <div class="box">
                        
                         <h1>WHY DO YOU TRAVEL?</h1>
                         <br><img src="image/paul-trienekens-419330-unsplash.jpg" alt="" class = "faqimg">
