--- a/whoami.html
+++ b/whoami.html
@@ -15,8 +15,8 @@
                     </ul>
                    </div>
                 </header>
-                   <div class="profile">
-                        <img src="image/KakaoTalk_20180508_195412651.jpg" alt="" class ="profile-img">
+                   <div class="box">
+                        <img src="image/KakaoTalk_20180508_195412651.jpg" alt="" class ="box-img">
                         <h1>KANG SEUNGYEON</h1>
                         <br><h5>IT Student - Traveler</h5>
                         <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>   
