--- a/gallery.html
+++ b/gallery.html
@@ -13,32 +13,21 @@
                     </ul>
                    </div>
                 </header>
-                   <div class="profile">
-                        <img src="image/ok.jpg" alt="" class ="profile-img" align= "center" >
-                        <h1>KANG SEUNGYEON</h1>
-                        <br><h5>IT Student - Traveler</h5>
-                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
+                   <div class="box">
+                        <img src="image/ok.jpg" alt="" class ="box-img" align= "center" >
+                        <h1>OSAKA CASTLE</h1>
+                        <br><h5>OSAKA / JAPAN</h5>
+                        <p><br></p>
                     <br><br><br>
-                    <img src="image/red.jpg" alt="" class ="profile-img" align= "center" >    
-                    <h1>KANG SEUNGYEON</h1>
-                        <br><h5>IT Student - Traveler</h5>
-                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
+                    <img src="image/red.jpg" alt="" class ="box-img" align= "center" >    
+                    <h1>RED SQUARE</h1>
+                        <br><h5>MOSCOW / RUSSIA</h5>
+                        <p><br></p>
                     <br><br><br>
-                    <img src="image/red.jpg" alt="" class ="profile-img" align= "center" >    
-                    <h1>KANG SEUNGYEON</h1>
-                        <br><h5>IT Student - Traveler</h5>
-                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
-                    <br><br><br>
-                    <img src="image/red.jpg" alt="" class ="profile-img" align= "center" >    
-                    <h1>KANG SEUNGYEON</h1>
-                        <br><h5>IT Student - Traveler</h5>
-                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
-                    <br><br><br>
-                    <img src="image/red.jpg" alt="" class ="profile-img" align= "center" >    
-                    <h1>KANG SEUNGYEON</h1>
-                        <br><h5>IT Student - Traveler</h5>
-                        <p><br>Born and raised in Seoul, Korea. I'm a passionate student and a traveler. I've been to Moscow, St.Petersburg in Russia and Osaka, Kyoto in Japan.</p>
-                    <br><br><br>
+                    <img src="image/neva.jpg" alt="" class ="box-img" align= "center" >    
+                    <h1>NEVA RIVER</h1>
+                        <br><h5>ST.PETERSBURG / RUSSIA</h5>
+                        <p><br></p>
                     </div>
     </body>
 </html>
