--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Travel</title>
     <link href="index.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
@@ -14,12 +15,13 @@
                     <a href="index.html"> HOME</a>
                 </li>
                 <li>
-                    <a href="faq.html"> FAQ</a>
+                    <a href="counter.html"> FAQ</a>
                 </li>
             </ul>
         </div>
         <div class="intro">
-            <h1><p>Traveler's Cabin</p><div id="clock" class="clockstyle"></div>
+            <h1><p>Traveler's Cabin</p>
+                <div id="clock" class="clockstyle"></div>
                 <script type="text/javascript" language="javascript">
                 function renderTime(){
         
