--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Travel</title>
     <link href="index.css" rel="stylesheet" type="text/css">
+    <script>
+    alert('Hello There! Welcome!')
+    </script>
 
 </head>
 
