--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Travel</title>
     <link href="index.css" rel="stylesheet" type="text/css">
     <script>
-    alert('Hello There! Welcome!')
+    alert('Hello There!')
     </script>
 
 </head>
