--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,12 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
     <title>Travel</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="gallery.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -20,12 +24,42 @@
         </div>
     </header>
     <div class="box">
-        <a href="#" onclick="osaka()">
-            <img src="image/ok.jpg" alt="" class="box-img" align="center">
-        </a>
+        <div class="container">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+
+                    <div class="item active">
+                        <img src="image/ok2.jpg" alt="image1" style="width:100%;" onclick="osaka2()">
+                    </div>
+
+
+                    <div class="item">
+                        <img src="image/ok.jpg" alt="image2" style="width:100%;" onclick="osaka()">
+                    </div>
+
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
         <script type="text/javascript">
             function osaka() {
                 window.open("osakacastle.html");
+            }
+        </script>
+        <script type="text/javascript">
+            function osaka2() {
+                window.open("osakacastle2.html");
             }
         </script>
         <h1>OSAKA CASTLE</h1>
@@ -37,12 +71,42 @@
         <br>
         <br>
         <br>
-        <a href="#" onclick="red()">
-            <img src="image/red.jpg" alt="" class="box-img" align="center">
-        </a>
+        <div class="container">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+
+                    <div class="item active">
+                        <img src="image/red.jpg" alt="image1" style="width:100%;" onclick="red()">
+                    </div>
+
+
+                    <div class="item">
+                        <img src="image/red2.jpg" alt="image2" style="width:100%;" onclick="red2()">
+                    </div>
+
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
         <script type="text/javascript">
             function red() {
                 window.open("redsquare.html");
+            }
+        </script>
+        <script type="text/javascript">
+            function red2() {
+                window.open("redsquare2.html");
             }
         </script>
         <h1>RED SQUARE</h1>
@@ -54,12 +118,42 @@
         <br>
         <br>
         <br>
-        <a href="#" onclick="neva()">
-            <img src="image/neva.jpg" alt="" class="box-img" align="center">
-        </a>
+        <div class="container">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+
+                    <div class="item active">
+                        <img src="image/neva.jpg" alt="image1" style="width:100%;" onclick="neva()">
+                    </div>
+
+
+                    <div class="item">
+                        <img src="image/neva2.jpg" alt="image2" style="width:100%;" onclick="neva2()">
+                    </div>
+
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
         <script type="text/javascript">
             function neva() {
                 window.open("nevariver.html");
+            }
+        </script>
+        <script type="text/javascript">
+            function neva() {
+                window.open("nevariver2.html");
             }
         </script>
         <h1>NEVA RIVER</h1>
